Bug 151172 - LibODev crashed if Grammalect extension activated
Summary: LibODev crashed if Grammalect extension activated
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.5.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2022-09-25 09:40 UTC by surbun
Modified: 2022-10-01 04:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File to illustrate bug (116.65 KB, image/jpeg)
2022-09-25 09:44 UTC, surbun
Details
gdb bt (8.13 KB, text/plain)
2022-09-26 17:49 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description surbun 2022-09-25 09:40:53 UTC
Description:
LibreOfficeDev always crashes if "Grammalecte-fr-v2.1.2" is activated. (see attached file)
Writer crashes on opening & calc crashes on closing a file
Nevertheless, this can be avoided only when standard option is chosen (see attached file)


Steps to Reproduce:
1.Open Libreoffice
2.Install "Grammalecte-fr-v2.1.2"
3.Close libreoffice
4.Open a writer file or calc file 

Actual Results:
Libreoffice always crashes on opening & on closing a calc file


Expected Results:
Libreoffice opens the file for writer & does not crash when closin calc file


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Same result on resetting user profile file and OpenGL activated or not
Comment 1 surbun 2022-09-25 09:44:51 UTC
Created attachment 182667 [details]
File to illustrate bug

Bug appeared since the 29th August build
The 28th build is OK
Comment 2 Julien Nabet 2022-09-26 17:49:19 UTC
Created attachment 182685 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I got a crash when launching Writer (with tabs user interface)

I noticed this log too when installing Grammalecte and afterwards
warn:configmgr:110125:110125:configmgr/source/xcuparser.cxx:646: unknown property "Target" in "file:///home/julien/lo/libreoffice/instdir/program/../program/../user/uno_packages/cache/registry/com.sun.star.comp.deployment.configuration.PackageRegistryBackend/lu4570h.tmp/addons.xcu"

BTW, it's quite strange the website indicates in red the current version is 2.1.1 (see https://grammalecte.net/#download) whereas it's 2.1.2
Comment 3 Julien Nabet 2022-09-26 17:50:10 UTC
Caolán: thought you might be interested in this crash in vcl part.
Comment 4 Julien Nabet 2022-09-26 18:34:47 UTC
I noticed in bt "ImageOrientationController" and it's new from: dbeb697d62250e9429462c7f61b859893262a651
tdf#149956 Rework toolbar image flipping
    
    An unified code, covering both vcl and weld cases. For
    SidebarToolBox, the controller is created before items
    are inserted, so we listen for item insert event to set
    initially correct state.

=> cc Maxim
Comment 5 Commit Notification 2022-09-30 11:02:02 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79e450749d58e21cad747592f49e505830184d74

tdf#151172 crash in notebookbar with extension enabled

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2022-09-30 17:13:35 UTC
On pc Debian x86-64 with master sources updated today (fb417ee082afdd2e80a1f48aa420bb8d5cb97686) I don't reproduce this anymore.
Thank you Maxim!
Comment 7 surbun 2022-10-01 04:39:40 UTC
Seems to be OK now on today's daily build

Thanks for fixing this issue