tdf#151172 crash in notebookbar with extension enabled

Change-Id: I60d777b27ffee095807490f4b181b1b08ed88462
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140683
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>